@@ -909,21 +909,44 @@ public final class ReflectionUtils {
 					+ "and then the method name, optionally followed by a parameter list enclosed in parentheses.");
 
 		String className = fullyQualifiedMethodName.substring(0, indexOfFirstHashtag);
-		String methodPart = fullyQualifiedMethodName.substring(indexOfFirstHashtag + 1);
-		String methodName = methodPart;
+		String qualifiedMethodName = fullyQualifiedMethodName.substring(indexOfFirstHashtag + 1);
+		String[] methodPart = parseQualifiedMethodName(qualifiedMethodName);
+
+		return new String[] { className, methodPart[0], methodPart[1] };
+	}
+
+	/**
+	 * Parse the supplied method name into a 2-element {@code String[]} with
+	 * the following content.
+	 *
+	 * <ul>
+	 *   <li>index {@code 0}: the name of the method</li>
+	 *   <li>index {@code 1}: a comma-separated list of parameter types, or a
+	 *       blank string if the method does not declare any formal parameters</li>
+	 * </ul>
+	 *
+	 * @param qualifiedMethodName a qualified method name, never {@code null} or blank
+	 * @return a 2-element array of strings containing the parsed values
+	 */
+	@API(status = INTERNAL, since = "1.9")
+	public static String[] parseQualifiedMethodName(String qualifiedMethodName) {
+		String methodName = qualifiedMethodName;
 		String methodParameters = "";
 
-		if (methodPart.endsWith("()")) {
-			methodName = methodPart.substring(0, methodPart.length() - 2);
+		if (qualifiedMethodName.endsWith("()")) {
+			methodName = qualifiedMethodName.substring(0, qualifiedMethodName.length() - 2);
 		}
-		else if (methodPart.endsWith(")")) {
-			int indexOfLastOpeningParenthesis = methodPart.lastIndexOf('(');
-			if ((indexOfLastOpeningParenthesis > 0) && (indexOfLastOpeningParenthesis < methodPart.length() - 1)) {
-				methodName = methodPart.substring(0, indexOfLastOpeningParenthesis);
-				methodParameters = methodPart.substring(indexOfLastOpeningParenthesis + 1, methodPart.length() - 1);
+		else if (qualifiedMethodName.endsWith(")")) {
+			int indexOfLastOpeningParenthesis = qualifiedMethodName.lastIndexOf('(');
+			if ((indexOfLastOpeningParenthesis > 0)
+					&& (indexOfLastOpeningParenthesis < qualifiedMethodName.length() - 1)) {
+				methodName = qualifiedMethodName.substring(0, indexOfLastOpeningParenthesis);
+				methodParameters = qualifiedMethodName.substring(indexOfLastOpeningParenthesis + 1,
+					qualifiedMethodName.length() - 1);
 			}
 		}
-		return new String[] { className, methodName, methodParameters };
+
+		return new String[] { methodName, methodParameters };
 	}
 
 	/**
